--- a/central-de-erros/src/view/login/style.css
+++ b/central-de-erros/src/view/login/style.css
@@ -1,35 +1,54 @@
 body html{
   padding: 0;
   margin: 0;
-  background-color:#6C7A89;
+  font-family: 'Roboto';
 }
 
 .login-content{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: #6C7A89;
+  background-color: #ffffff;
+  font-family: 'Roboto';
 }
+
+.logo{
+  height: 100px;
+  width: 100px;
+  padding: 10px;
+}
+
 
 .form-signin {
   border-style: solid;
-  border-width: 1px;
-  border-radius: 10px;
-  min-width: 400px;
-  padding: 10px 10px 10px 10px;
-  background-color: #666666aa;
+  border-width: 0px;
+  border-radius: 9px 9px 0px 0px;
+  min-width: 350px;
+  padding: 40px 10px 40px 10px;
+  background-color: #061e2d;
 }
 
 .btn-login {
-  background-color: #ffffff;
+  background-color: #cd683e;
+  color: #ffffff;
 }
 
 .btn-login:hover{
-  background-color: #f21667;
+  background-color: #c23439;
   color: #ffffff;
+}
+
+
+.opcoes-login{
+  margin: 0px;
+  padding: 12px 0px 0px 0px;
+  background-color: #3d464b;
+  min-width: 350px;
+  height: 50px;
+  border-radius: 0px 0px 9px 9px;
 }
 
 .opcoes-login a{
@@ -39,5 +58,5 @@ body html{
 }
 
 .opcoes-login a:hover{
- color: #f21667;;
+ color: #dd9d3c;
 }
