--- a/central-de-erros/src/view/login/style.css
+++ b/central-de-erros/src/view/login/style.css
@@ -3,7 +3,6 @@ body html{
   margin: 0;
   font-family: 'Roboto';
 }
-
 .login-content{
   display: flex;
   flex-direction: column;
@@ -11,7 +10,8 @@ body html{
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: #ffffff;
+  background-color: #071e2d; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to bottom right, #525557aa,#a7acaf); 
   font-family: 'Roboto';
 }
 
