--- a/central-de-erros/src/view/usuario-novo/style.css
+++ b/central-de-erros/src/view/usuario-novo/style.css
@@ -1,10 +1,10 @@
-body html{
+body html {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
-.label-cadastro{
+.label-cadastro {
   background-color: #061e2d;
 }
 
@@ -16,24 +16,24 @@ body html{
   width: 100vw;
   height: 100vh;
   background-color: #071e2d; /* For browsers that do not support gradients */
-  background-image: linear-gradient(to bottom right, #525557aa,#a7acaf); 
-  font-family: 'Roboto';
+  background-image: linear-gradient(to bottom right, #525557aa, #a7acaf);
+  font-family: "Roboto";
 }
 
-.label-cadastro h3{
+.label-cadastro h3 {
   font-size: 27px;
 }
 
-.label-cadastro i{
+.label-cadastro i {
   font-size: 30px;
   color: #dd9d3c;
 }
 
-.label-cadastro hr{
+.label-cadastro hr {
   border: solid 0.25px #ffffff;
 }
 
-.form-login{
+.form-login {
   border-style: solid;
   border-width: 0px;
   border-radius: 9px 9px 9px 9px;
@@ -42,12 +42,23 @@ body html{
   background-color: #061e2d;
 }
 
- .btn-cadastro {
+.btn-cadastro {
   background-color: #cd683e;
   color: #ffffff;
 }
 
-.btn-cadastro:hover{
+.btn-cadastro:hover {
   background-color: #c23439;
   color: #ffffff;
+}
+.voltar {
+  color: white;
+}
+.voltar:hover {
+  color: #cd683e;
+  text-decoration: none;
+}
+.links {
+  display: flex;
+  justify-content: space-between;
 }
