--- a/central-de-erros/src/view/dashboard/components/index.css
+++ b/central-de-erros/src/view/dashboard/components/index.css
@@ -1,4 +1,4 @@
-.filters {
+/* .filters {
   background-color: aquamarine;
   display: flex;
   justify-content: space-between;
@@ -40,4 +40,4 @@
   max-width: 1280px;
   margin: 0 auto;
   margin-bottom: 1rem;
-}
+} */
